@@ -15,7 +15,10 @@ namespace Pds {
      *   the old values have already been recorded in the existing xtc files. 
      */
     enum Detector {NoDetector,AmoIms,AmoGasdet,AmoETof,AmoITof,AmoMbes,AmoVmi,AmoBps,
-                   Camp,EpicsArch,BldEb,SxrBeamline,SxrEndstation,NumDetector};
+                   Camp,EpicsArch,BldEb,
+		   SxrBeamline,SxrEndstation,
+		   XppSb1Ipm             ,XppSb1Pim,XppMonPim,XppSb2Ipm,XppSb3Ipm,XppSb3Pim,XppSb4Pim,
+		   NumDetector};
     enum Device   {NoDevice,Evr,Acqiris,Opal1000,TM6740,pnCCD,Princeton,Fccd,Ipimb,Encoder,NumDevice};
 
     DetInfo() {}
